--- a/docs/Makefile
+++ b/docs/Makefile
@@ -2,7 +2,7 @@
 #
 
 # You can set these variables from the command line.
-SPHINXOPTS    = 
+SPHINXOPTS    = -E -a
 SPHINXBUILD   = sphinx-build
 PAPER         =
 BUILDDIR      = ../../built_docs
