--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "3.6"
 # command to install dependencies
 install:
-  - pip install pytest
+  - pip install pytest jinja2 weasyprint dna_features_viewer
   - pip install -e .
 # command to run tests
 script:
