--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,11 @@ python:
 # command to install dependencies
 install:
   - pip install pytest jinja2 weasyprint dna_features_viewer
+  - pip install coveralls pytest-cov pytest
   - pip install -e .
 # command to run tests
 script:
-  - python -m pytest
+  - python -m pytest -v --cov bandwagon --cov-report term-missing
+
+after_success:
+  - coveralls
