--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ python:
   - "3.6"
 # command to install dependencies
 install:
-  - pip install jinja2 weasyprint dna_features_viewer
-  - pip install coveralls pytest-cov pytest
+  - pip install jinja2 weasyprint dna_features_viewer geneblocks
+  - pip install coveralls pytest-cov==2.6 pytest
   - sudo apt-get install ncbi-blast+
   - pip install -e .
 # command to run tests
