--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "3.6"
 # command to install dependencies
 install:
-  - pip install jinja2 weasyprint dna_features_viewer geneblocks
+  - pip install dna_features_viewer geneblocks pdf_reports
   - pip install coveralls pytest-cov==2.6 pytest
   - sudo apt-get install ncbi-blast+
   - pip install -e .
