added reports extras to travis installation

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
   - pip install matplotlib primer3-py
   - pip install coveralls pytest-cov==2.6 pytest
   - sudo apt-get install ncbi-blast+
-  - pip install -e .
+  - pip install -e .[reports]
 # command to run tests
 script:
   - python -m pytest -v --cov dnachisel --cov-report term-missing
