--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 install:
   - pip install matplotlib primer3-py genome_collector
   - pip install coveralls pytest-cov==2.6 pytest==3.2.3 geneblocks
-  - sudo apt-get install ncbi-blast+
+  - sudo apt-get install ncbi-blast+ bowtie
   - pip install -e .[reports]
 # command to run tests
 script:
