--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: python
 python:
-  - "3.6"
+  - "3.9"
 # command to install dependencies
 install:
-  - pip install matplotlib primer3-py genome_collector
-  - pip install coveralls pytest-cov==2.6 pytest==3.2.3 geneblocks
+  - pip install coveralls pytest-cov pytest
+  - pip install matplotlib primer3-py genome_collector geneblocks
   - sudo apt-get install ncbi-blast+ bowtie
   - pip install -e .[reports]
 # command to run tests
