Adding test extra

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,8 @@ python:
   - "3.9"
 # command to install dependencies
 install:
-  - pip install coveralls pytest-cov pytest
-  - pip install matplotlib primer3-py genome_collector geneblocks
   - sudo apt-get install ncbi-blast+ bowtie
-  - pip install -e .[reports]
+  - pip install -e .[reports,test]
 # command to run tests
 script:
   - python -m pytest -v --cov dnachisel --cov-report term-missing
